--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!doctype html>
 <html>
-<head>
-<title>Hello</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>You can you up by BillionWang</title>
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-<body>
-<h1>Hello</h1>
-
-</body>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>You can you up</h1>
+        <p>I can </p>
+        <p class="view"><a href="https://github.com/BillionWang">View the Project on GitHub <small>BillionWang</small></a></p>
+        <ul>
+          <li class="single"><a href="https://github.com/BillionWang/billionwang.github.com">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <p>欢迎！</p>
+      </section>
+    </div>
+    <footer>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
